--- a/application/users/templates/base.html
+++ b/application/users/templates/base.html
@@ -7,68 +7,30 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+        <script src="https://www.unpkg.com/@propelauth/javascript@2.0.11/dist/javascript.min.js" integrity="sha384-FENNH2f7QuQvkZJBL7jebLr0OtYKgTA2iq+C5g3VXXX7SBwWmeMMoc+pBBtcn76G" crossorigin="anonymous"></script>
         {% load static %}
-        <!-- link rel="stylesheet" href="{% static 'css/styles.css' %}" -->
+        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
         {% block javascript %}{% endblock %}
     </head>
     <body>
         <div class="container-fluid">
             <div class="row">
-                <!-- {% block sidebar %}
+                {% block sidebar %}
                 <nav class="navbar navbar-expand-md" id="navbar">
                     <div class="col-md-1"></div>
                     <div class="col-md-11">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a href="{% url 'index' %}" class="nav-link" id="home">Home</a></li>
-                            <li class="nav-item"><a href="{% url 'search' %}" class="nav-link">Search</a></li>
-                            <li class="nav-item dropdown">
-                                <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Create</a>
-                                <div class="dropdown-menu">
-                                    <a href="{% url 'manufacturer-create' %}" class="dropdown-item">Manufacturer</a>
-                                    <a href="{% url 'model-create' %}" class="dropdown-item">Model</a>
-                                    <a href="{% url 'device-create' %}" class="dropdown-item">Device</a>
-                                    <a href="{% url 'location-create' %}" class="dropdown-item">Location</a>
-                                    <a href="{% url 'user-create' %}" class="dropdown-item">User</a>
-                                </div>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">List</a>
-                                <div class="dropdown-menu">
-                                    <a href="{% url 'manufacturers' %}" class="dropdown-item">All manufacturers</a>
-                                    <a href="{% url 'models' %}" class="dropdown-item">All models</a>
-                                    <a href="{% url 'devices' %}" class="dropdown-item">All devices</a>
-                                    <a href="{% url 'locations' %}" class="dropdown-item">All locations</a>
-                                    <a href="{% url 'users' %}" class="dropdown-item">All users</a>
-                                </div>
-                            </li>
                         </ul>
                     </div>
                 </nav>
-                {% endblock %} -->
+                {% endblock %}
                 <div class="col-md-2"></div>
                 <div class="col-md-10">
                     <h1>Users</h1>
                     {% block content %}
                     {% endblock %}
-                    <!-- {% block script %}
+                    {% block script %}
                     {% endblock %}
-                    {% block pagination %}
-                    {% if is_paginated %}
-                    <div class="pagination">
-                        <span class="page-links">
-                        {% if page_obj.has_previous %}
-                            <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">Previous</a>
-                        {% endif %}
-                        <span class="page-current">
-                            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-                        </span>
-                        {% if page_obj.has_next %}
-                            <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">Next</a>
-                        {% endif %}
-                        </span>
-                    </div>
-                    {% endif %}
-                    {% endblock %} -->
                 </div>
             </div>
         </div>
