--- a/application/users/templates/login.html
+++ b/application/users/templates/login.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Confirm password reset</h2>
+    <h2>Login</h2>
     <form method="post">
         {% csrf_token %}
         {% form.as_table %}
-        <input type="submit" value="Change">
+        <input type="submit" value="Login">
     </form>
-{% endblock%}
+    <a href="{% url 'dashboard' %}">Back to dashboard</a>
+{% endblock %}
