Added intake questions

--- a/application/users/templates/index.html
+++ b/application/users/templates/index.html
@@ -9,5 +9,5 @@
 {% endblock%}
 {% block script %}
     {% load static %}
-    <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
+    <script type="module" src="{% static 'js/index.js' %}"></script>
 {% endblock %}
