--- a/application/users/templates/profile.html
+++ b/application/users/templates/profile.html
@@ -11,5 +11,5 @@
 {% endblock%}
 {% block script %}
     {% load static %}
-    <script type="text/javascript" src="{% static 'js/profile.js' %}"></script>
+    <script type="module" src="{% static 'js/profile.js' %}"></script>
 {% endblock %}
